# fem3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  create2DMesh.m  create3DMesh.m  createMesh.m  cube.stl  flat_bar.stl  flat_ring.stl  generateMesh.m  notes.tex  writettg.m
matlab_files/: G.m  G_eps.m  bilin_eps.m  bilin_eps_soap.m  compute_l2norm.m  energy.m  err.m  nonlinear.m  soap.m  step_assembly.m
src/: App.cpp  App.h  CMakeLists.txt  Composition.frag  Composition.vert  FEMObject.cpp  FEMObject.h  FEMObject2D.cpp  FEMObject2D.h  FEMObject3D.cpp  FEMObject3D.h  FEMTask.cpp  FEMTask.h  FEMTask3D.cpp  FEMTask3D.h  FEMTaskLinear3D.cpp  FEMTaskLinear3D.h  LICENSE_NOTICE.txt  MeshData.cpp  MeshData.h  PhongId.frag  PhongId.vert  PhongTransparentId.frag  PhongTransparentId.vert  Shaders.cpp  Shaders.h  Typedefs.h  UI.cpp  UI.h  Util.cpp  Util.h  Vertex.frag  Vertex.vert  fem3dstyle.css  index.html  main.cpp  resources.conf
